[package]
name = "databento-defs"
authors = ["Databento <support@databento.com>"]
version = "0.4.1"
edition = "2021"
description = "Common Databento enums and data structs"
license = "Apache-2.0"
repository = "https://github.com/databento/databento-defs"
keywords = ["finance", "market-data", "trading"]
# see https://crates.io/category_slugs
categories = ["api-bindings"]

[features]
default = []
# Enables deriving the `Copy` trait for records.
trivial_copy = []
# Enables deriving serialization for types.
serde = ["dep:serde"]

[dependencies]
# Deriving translation between integers and enums
num_enum = "0.5.7"
# Generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"], optional = true }
